<resources>
    <string name="app_name">QuickText</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quick Text</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="status">Status</string>
    <string name="message">Message</string>

    <!-- Strings used for fragments for navigation -->
    <string name="menu_home">Enter your Number</string>
    <string name="status_saver">Status Saver</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_the_number_you_want_to_send_whatsapp">Enter the Number you want to Send WhatsApp</string>
    <string name="statussaver">Status Saver</string>
    <string name="pull_down_to_refresh">Pull down to Refresh</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="_2_check_inside_a_save_status_if_not_there_then_pull_down_to_refresh">2. Check inside a save status if not there then Pull Down to refresh.</string>
    <string name="_1_go_and_see_the_status_from_whatsapp">1. Go and see the status from WhatsApp</string>
    <string name="steps">Steps:</string>
</resources>