<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nero.qtquicktext.ui.messageWithoutSavingNumber.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_status_saver"
        android:name="com.nero.qtquicktext.ui.saveStatus.SaveStatusFragment"
        android:label="@string/status_saver"
        tools:layout="@layout/fragment_save_status" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.nero.qtquicktext.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
</navigation>